--- a/FrontendMentorProjects/QRCodeChallenge/styles.css
+++ b/FrontendMentorProjects/QRCodeChallenge/styles.css
@@ -14,8 +14,7 @@ body {
 }
 
 img {
-    width: 100%;
-    height: 100%;
+    max-width: 100%; /* Ajuste el tamaño máximo de la imagen al 100% del contenedor */
     object-fit: contain;
     border-radius: 10px;
 }
