--- a/styles.css
+++ b/styles.css
@@ -185,8 +185,14 @@ footer {
     margin-bottom: 50px;
 }
 
-@media screen and (width <= 600px) {
+@media screen and (max-width: 600px) {
     main {
         margin-left: 30px;
+        margin-right: 30px;
     }
-  }
+    footer {
+        padding-left: 5px;
+        padding-right: 5px;
+        max-width: 98%;
+    }
+}
