--- a/styles/styles.css
+++ b/styles/styles.css
@@ -157,6 +157,11 @@ p {
     padding-bottom: 20px;
     height: fit-content;
     min-height: 100vh;
+    background-image: url(../images/pexels-pixabay-434645.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
 }
 
 .section-container-projects h2,
