--- a/FrontendMentorProjects/03RecipePage/styles/styles.css
+++ b/FrontendMentorProjects/03RecipePage/styles/styles.css
@@ -1,3 +1,4 @@
+/* Font Faces */
 @font-face {
     font-family: Young Serif;
     src: url("../assets/fonts/young-serif/YoungSerif-Regular.ttf");
@@ -12,101 +13,129 @@
     font-style: normal;
 }
 
+/* Reset Styles */
 html {
     margin: 0;
     padding: 0;
 }
 
+/* Body Styles */
 body {
     background-color: hsl(30, 54%, 90%);
-    font-size: 16px;
 }
 
+/* Content Container */
 .content-container {
     width: 70vw;
-    margin: 10% auto;
+    margin: 10vh auto;
     border-radius: 10px;
     background-color: hsl(0, 0%, 100%);
-    padding: 5%;
+    padding: 5vw;
 }
 
+/* Preparation Time Container */
 .prep-time-container {
     background-color: hsl(330, 100%, 98%);
     border-radius: 10px;
-    margin: 0 auto;
-    padding-top: 2vw;
-    padding-left: 2vw;
-
+    padding: 1vh 2vw;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
 }
 
-.prep-time-container ul {
-}
-
+/* Images */
 img {
     display: block;
     width: 100%;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 0 auto;
 }
 
-p {
-    font-size: calc(6px + 1vw);
-    padding: 1vh 0;
-}
-
-h1, h2 {
-    font-family: "Young Serif";
-}
-
+/* Headings */
 h1 {
-    font-size: calc(12px + 2vw);
+    font-family: "Young Serif";
+    font-size: calc(14px + 2vw);
     font-weight: normal;
-    margin-top: 2vh;
+    color: black;
 }
 
 h2 {
-    font-size: calc(8px + 2vw);
+    font-family: "Young Serif";
+    font-size: calc(6px + 2vw);
     font-weight: normal;
     color: hsl(14, 45%, 36%);
-    margin-top: 2vh;
-}
-
-p, h3, li {
-    font-family: Outfit;
-    color: hsl(30, 10%, 34%);
 }
 
 h3 {
-    margin: 0;
+    font-family: "Outfit";
     font-size: calc(8px + 1vw);
     font-weight: bold;
     color: hsl(332, 51%, 32%);
+    margin-top: 1vh;
 }
 
+/* Paragraphs */
+p {
+    font-family: "Outfit";
+    font-size: calc(5px + 1vw);
+    color: hsl(30, 10%, 34%);
+}
+
+/* Horizontal Rule */
 hr {
-    color: lightgray;
-}
+    color: hsl(30, 18%, 87%);
+    margin-top: 3vh;
+    margin-bottom: 3vh;
+    border-top: 1px solid;
+}   
 
+/* Lists */
 ul, ol {
-    padding: 15px;
-}
-
-ul, ol, ul li::marker, ol li::marker {
-    color: hsl(332, 51%, 32%);
-    font-weight: bold;
-}
-
-li {
-    font-size: calc(6px + 1vw);
-    margin-bottom: 1vh;
-    margin-left: 1vw;
+    padding-left: 3vw;
 }
 
 ul li {
     list-style-type: disc;
 }
 
+ul li::marker, ol li::marker {
+    color: hsl(332, 51%, 32%);
+    font-weight: bold;
+}
+
+
+li {
+    font-family: "Outfit";
+    font-size: calc(6px + 1vw);
+    color: hsl(30, 10%, 34%);
+}
+
+/* Text Spacing */
+h2, h3, p, li {
+    margin-bottom: 1vh;
+}
+
+/* Table */
 table {
-    width: 90%;
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th, td {
+    padding: 8px;
+    border-bottom: 1px solid hsl(30, 2%, 80%);
     text-align: left;
+}
+
+th {
+    font-family: "Outfit";
+    color: hsl(30, 10%, 34%);
+    font-size: calc(6px + 1vw);
+    font-weight: normal;
+}
+
+td {
+    font-family: "Outfit";
+    color: hsl(14, 45%, 36%);
+    font-size: calc(6px + 1vw);
+    font-weight: bold;   
 }
