--- a/FrontendMentorProjects/03RecipePage/styles/styles.css
+++ b/FrontendMentorProjects/03RecipePage/styles/styles.css
@@ -42,6 +42,14 @@ body {
     margin-bottom: 2vh;
 }
 
+.prep-time-container p {
+    font-family: "Outfit";
+    font-size: calc(8px + 1vw);
+    font-weight: bold;
+    color: hsl(332, 51%, 32%);
+    margin-top: 1vh;
+}
+
 /* Images */
 img {
     display: block;
@@ -63,14 +71,6 @@ h2 {
     font-size: calc(6px + 2vw);
     font-weight: normal;
     color: hsl(14, 45%, 36%);
-}
-
-h3 {
-    font-family: "Outfit";
-    font-size: calc(8px + 1vw);
-    font-weight: bold;
-    color: hsl(332, 51%, 32%);
-    margin-top: 1vh;
 }
 
 /* Paragraphs */
