--- a/FreeCodeCampProjects/02JavaScriptAlgorithmsAndDataStructures(Beta)/18CertificationProjectCashRegister/styles.css
+++ b/FreeCodeCampProjects/02JavaScriptAlgorithmsAndDataStructures(Beta)/18CertificationProjectCashRegister/styles.css
@@ -1,11 +1,26 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
 body {
-    font-family: Arial, sans-serif;
-    font-size: 16px;
-    line-height: 1.6;
+    margin: 8vh 8vh 8vh 8vh;
+    text-align: center;
+    background-color: rgb(149, 19, 9);
+    color: white;
+    
+}
+
+.current-change {
+    margin-top: 8px;
+}
+
+table {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+    margin-top: 24px;
+    margin-bottom: 24px;
 }
