--- a/FreeCodeCampProjects/02JavaScriptAlgorithmsAndDataStructures(Beta)/20CertificationPokemonSearchApp/styles.css
+++ b/FreeCodeCampProjects/02JavaScriptAlgorithmsAndDataStructures(Beta)/20CertificationPokemonSearchApp/styles.css
@@ -1,6 +1,145 @@
 .app-container {
+    margin-top: 10px;
+    max-width: 600px;
+}
+
+h1 {
+    margin-bottom: 3vh;
+    text-align: center;
+}
+
+.buttons {
+    margin-top: 1vh
+}
+
+.identification {
+    margin-top: 3vh;
+    margin-bottom: 1vh;
     display: flex;
     flex-direction: column;
+}
+
+.type-and-size {
+    display: flex;
+    justify-content: center;
+}
+
+img {
+    width: 80px;
+}
+
+.sprite-container {
+    display: flex;
+    justify-content: center;
+    min-height: 150px;
+    padding-top: 20px;
+}
+
+#sprite {
+    width: 130px;
+}
+
+#types {
+    min-height: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    gap: 5px;
+}
+
+.type {
+    width: 66px;
+    padding: 5px;
+    font-size: 0.7rem;
+    text-align: center;
+    border-radius: 5px;
+    background-color: rgb(181, 144, 144);
+    text-transform: uppercase;
+}
+
+.type-and-size {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.type-and-size span {
+    margin-right: 10px;
+}
+
+.normal {
+    background-color: #b7b7aa;
+  }
+  
+  .fire {
+    background-color: #ff6f52;
+  }
+  
+  .water {
+    background-color: #42a1ff;
+  }
+  
+  .electric {
+    background-color: #fecc33;
+  }
+  
+  .grass {
+    background-color: #78cc55;
+  }
+  
+  .ice {
+    background-color: #66ccfe;
+  }
+  
+  .fighting {
+    background-color: #d3887e;
+  }
+  
+  .poison {
+    background-color: #c68bb7;
+  }
+  
+  .ground {
+    background-color: #dfba52;
+  }
+  
+  .flying {
+    background-color: #8899ff;
+  }
+  
+  .psychic {
+    background-color: #ff66a3;
+  }
+  
+  .bug {
+    background-color: #aabb23;
+  }
+  
+  .rock {
+    background-color: #baaa66;
+  }
+  
+  .ghost {
+    background-color: #9995d0;
+  }
+  
+  .dragon {
+    background-color: #9e93f1;
+  }
+  
+  .dark {
+    background-color: #b59682;
+  }
+  
+  .steel {
+    background-color: #abaabb;
+  }
+  
+  .fairy {
+    background-color: #ed99ed;
+  }
+
+table {
+    margin-top: 5vh;
 }
 
 .base-stats {
